--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     Hello there, awesome person! 
     <h1>I am ARJUN K R</h1>
-  </body>
+<img src="https://avatars.githubusercontent.com/u/68550118?v=4">
+
 
 </html>
