--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>I am ARJUN K R</h1>
 <img src="https://avatars.githubusercontent.com/u/68550118?v=4">
 <ul>
-    <li>youtube.com</li>
-    <li>lichess.org</li>
-    <li>github.com</li>
+    <li><a href="https://youtube.com">This is a link to YouTube!</a></li>
+    <li><a href="https://lichess.org">This is a link to Lichess!</a></li>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
 </ul>
 
 
